style.css
:root {
  --primary-bg-color: #2babe3;
  --secondary-bg-color: #edf8fd;
  --primary-font-color: #040F14;
}

* {
  margin: 0;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.header {
  min-height: 72px;
  max-height: 200px;
  background: var(--primary-bg-color);
  color: var(--primary-font-color);
  font-size: 32px;
  font-weight: 900;
  text-align: center;
  align-content: center;
}

.footer {
  height: 72px;
  background: #eee;
  text-align: center;
  align-content: center;
}

.footertext {
  color: var(--primary-font-color);
}

.sidebar {
  
  background: var(--secondary-bg-color);
  box-sizing: border-box;
}

.header, 
.sidebar {
  padding-left: 16px;
}

.card {
  border: 1px solid #eee;
  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
  border-radius: 4px;
  width: 300px;
  height: 200px;
  overflow: hidden;
}



.bgimg {
  width: 100%;
  aspect-ratio: 3 / 2;
  object-fit: cover;
  object-position: center center;
}

.bodywrapper {
  display: flex;
  flex: 1;
  flex-direction: column;
}

.cardwrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 32px;
  justify-content: center;
  padding: 32px 250px;
}

.sidebar a {
  text-decoration: none;
  color: var(--primary-font-color);
  font-size: 24px;
}

.sidebar ul {
  list-style-type: none;
  padding-left: 0;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 25px;
}

li {
  margin-bottom: 16px;
}

/* Portfolio Page Styles */

/* 
pfitemcard half > 50% split
pfitemcard third > 33% split
pfitemcard twothird > 66% split
pfitemcard fullsize > 100% cover
*/

.pfitemcard {
  flex: auto;
  background-color: lightgrey;
  overflow: hidden;
  line-height: 0;
}

.pfitemcard.half {
  width: 50%;
}

.pfitemcard.third {
  width: 33%;
}

.pfitemcard.twothird {
  width: 66%;
}

.pfitemcard.fullsize {
  width: 100%;
  height: 33vw;
}

.pfgrid {
  display: flex;
  flex-direction: row;
  gap: 32px;
  padding: 0px 15px;
  width: 100%;
}

.pfimgfullsize {
  width: 100%;
}


.pfimg {
  width: 100%;
  aspect-ratio: 3 / 2;
  object-fit: cover;
  object-position: center center;
  height: 100%;
}

.cardCopy {
  padding: 15px;
  display: flex;
  flex-direction: column;
  height: 100%;
  gap: 15px;
  justify-content: space-evenly;
}

.cardTitle {
  line-height: 1.4;
}

.cardSubtitle {
  line-height: 1.2;
}

.cardText {
  line-height: 1.0;
}

